QS-1500: Fix placeholder (it was cutted)

--- a/src/scss/_partials/_input.scss
+++ b/src/scss/_partials/_input.scss
@@ -15,6 +15,7 @@
 		background-position: -500px 0;
 		background-size: 100%;
 		background-repeat: no-repeat;
+		height: 68px;
 		&:focus, &:valid {
 			box-shadow: none;
 			outline: none;
